<?xml version="1.0"?>
<package format="2">
  <name>raspicat_slam</name>
  <version>0.0.1</version>
  <description>The raspicat_slam package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="ryuichiueda@gmail.com">Ryuichi Ueda</author>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/raspicat_slam/wiki</url>
  <url type="repository">http://wiki.ros.org/raspicat_slam</url>
  <url type="bugtracker">http://wiki.ros.org/raspicat_slam/issues</url>

  <exec_depend>joy</exec_depend>
  <exec_depend>raspicat_gamepad_controller</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>urg_node</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
