<?xml version="1.0"?>
<package format="2">
  <name>raspicat_navigation</name>
  <version>0.1.0</version>
  <description>The raspicat_navigation package</description>
  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <author email="support@rt-net.jp">RT Corporation</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>raspimouse_msgs</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>costmap_cspace</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>neonavigation</exec_depend>
  <exec_depend>planner_cspace</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>trajectory_tracker</exec_depend>
  <test_depend>roslaunch</test_depend>
</package>