<?xml version="1.0"?>
<package format="2">
  <name>raspicat_slam</name>
  <version>0.1.0</version>
  <description>The raspicat_slam package</description>
  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <author email="support@rt-net.jp">RT Corporation</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>raspicat_bringup</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
</package>
