<?xml version="1.0"?>
<package format="2">
  <name>raspicat_slam_navigation</name>
  <version>0.0.0</version>
  <description>The raspicat_slam_navigation package</description>
  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>raspicat_slam</exec_depend>
  <exec_depend>raspicat_navigation</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>